--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,11 @@
     <!--Dashboard-->
     <string name="app_name">Math ε\'</string>
 
-    <string name="info">Πληροφορίες\'</string>
-    <string name="profile">Προφίλ\'</string>
-    <string name="score">Σκορ\'</string>
-    <string name="exam">Εξέταση\'</string>
-    <string name="theory">Θεωρία\'</string>
+    <string name="info">Πληροφορίες</string>
+    <string name="profile">Προφίλ</string>
+    <string name="score">Σκορ</string>
+    <string name="exam">Εξέταση</string>
+    <string name="theory">Θεωρία</string>
 
     <!---->
-
-
-    <!--Dashboard-->
-
 </resources>
