--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="exam">Εξέταση</string>
     <string name="theory">Θεωρία</string>
 
+    <string name="dashboard_exam_toast">Παρακαλώ δημιουργήστε ένα προφίλ.</string>
+
+
     <!--Theory-->
 
     <string name="chose_unit">  Επέλεξε Ενότητα</string>
