--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,8 +47,8 @@
 
     <!--Score-->
 
-    <string name="score_internal">Τοπικά</string>
-    <string name="score_external">Eθνικά</string>
+    <string name="score_internal">Προσωπικά</string>
+    <string name="score_external">Δημοσιά</string>
 
     <!--Score-->
 
@@ -58,8 +58,8 @@
     <string name="time">Χρόνος: %1\$d</string>
     <string name="complete">Ολοκληρώθηκε!</string>
 
-    <!--Score_Internal-->
-    <!--Score_External-->
+
+    <!--Score_External--><!--Score_Internal-->
     <string name="score_name">Όνομα: %s</string>
     <string name="score_surname">Επίθετο: %s</string>
     <string name="score_school">Σχολείο: %s</string>
@@ -90,5 +90,9 @@
     <string name="info_profile_end_dialog">Σημαντικό δεν αποθηκεύει κενά πεδία οπότε αν υπάρχει προφίλ καθαρίσεις τα πεδία πρέπει να γράψεις νέα στοιχειά αλλιώς κρατάει τα παλιά.</string>
 
     <string name="info_ok_dialog">Εντάξει</string>
+
+    <!--Receiver-->
+    <string name="internet_ok">Συνδεμένο στο διαδίκτυο.</string>
+    <string name="internet_not_ok">Δεν υπάρχει σύνδεση στο διαδίκτυο.</string>
 
 </resources>
