--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="name">Όνομα</string>
     <string name="surname">Επίθετο</string>
     <string name="school">Σχολείο</string>
+    <string name="cansel">Aκύρωση</string>
+    <string name="start">Εκκίνηση</string>
+    <string name="next">Επόμενη</string>
 
 
     <!--Dashboard-->
@@ -32,6 +35,12 @@
     <string name="unit_six">Ενότητα 6</string>
     <string name="unit_seven">Ενότητα 7</string>
     <string name="unit_eight">Ενότητα 8</string>
+
+    <string name="welcome_message">Καλωσορίστε</string>
+    <string name="quiz_description">Το κουίζ αποτελείται από 12 ερωτήσεις. Για κάθε ερώτηση, επιλέγετε την απάντηση που θεωρείτε σωστή και πατάτε το κουμπί "Επόμενο" για να προχωρήσετε στην επόμενη ερώτηση.</string>
+    <string name="quiz_results">Όταν φτάσετε στην τελευταία ερώτηση και πατήσετε το κουμπί "Επόμενο", θα εμφανιστούν τα αποτελέσματα. Εκεί θα έχετε τη δυνατότητα να επιλέξετε αν θέλετε να αποθηκεύσετε τα αποτελέσματα ή όχι.</string>
+    <string name="good_luck">Καλή επιτυχία και καλή διασκέδαση στο κουίζ!</string>
+
 
     <!--Profile-->
 
@@ -95,4 +104,7 @@
     <string name="internet_ok">Συνδεμένο στο διαδίκτυο.</string>
     <string name="internet_not_ok">Δεν υπάρχει σύνδεση στο διαδίκτυο.</string>
 
+    <!--Receiver-->
+    <string name="question_number">Ερώτηση %1$d από %2$d</string>
+    <string name="completed_percent">Ολοκληρωμένο %1$d%%</string>
 </resources>
