--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="perfect_score">%1\$d απο %2\$d σωστές απαντήσεις</string>
     <string name="correct">Σωστές: %1\$d</string>
     <string name="incorrect">Λάθος: %1\$d</string>
-    <string name="time">Χρόνος: %1\$d</string>
+    <string name="time">Χρόνος: %1\$d ″</string>
     <string name="complete">Ολοκληρώθηκε!</string>
 
 
@@ -107,4 +107,6 @@
     <!--Receiver-->
     <string name="question_number">Ερώτηση %1$d από %2$d</string>
     <string name="completed_percent">Ολοκληρωμένο %1$d%%</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
