[achievement] Create achievement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,9 @@
     <!--Score-->
 
     <string name="score_internal">Προσωπικά</string>
-    <string name="score_external">Δημοσιά</string>
+    <string name="score_external">Δημόσια</string>
+    <string name="score_achievement">Τρόπαια</string>
+
 
     <!--Score-->
 
@@ -75,6 +77,7 @@
     <string name="score_correct">Σωστές: %s</string>
     <string name="score_incorrect">Λάθος: %s</string>
     <string name="score_time">Χρόνος: %s</string>
+    <string name="score_point">Πόντοι: %s</string>
 
     <!--Info-->
     <string name="info_welcome">Καλωσορίσατε στην Οθόνη Πληροφοριών!</string>
@@ -107,6 +110,97 @@
     <!--Receiver-->
     <string name="question_number">Ερώτηση %1$d από %2$d</string>
     <string name="completed_percent">Ολοκληρωμένο %1$d%%</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <!-- Achievement -->
+    <string name="pythagoras_title">ΠΥΘΑΓΟΡΑΣ</string>
+    <string name="pythagoras_info">
+        <![CDATA[
+        • Είναι ο κύριος θεμελιωτής των ελληνικών μαθηματικών.\n\n
+        • Ο Πυθαγόρας και η σχολή του έπαιξαν σημαντικό ρόλο στην ανάπτυξη της αριθμητικής και της γεωμετρίας.\n\n
+        • Ο Πυθαγόρας γεννήθηκε στο νησί της Σάμου.\n\n
+        • Ένα από τα πιο γνωστά έργα του Πυθαγόρα είναι το θεώρημα του Πυθαγόρα, που προσδιορίζει τη σχέση μεταξύ των πλευρών ενός τριγώνου.\n\n
+        • Επηρέασε σημαντικά την ανάπτυξη της μαθηματικής σκέψης και φιλοσοφίας στην αρχαία Ελλάδα.
+        ]]>
+    </string>
+    <string name="pythagoras_dates">580 π.Χ – 496 π.Χ</string>
+
+    <string name="euclid_title">ΕΥΚΛΕΙΔΗΣ</string>
+    <string name="euclid_info">
+        <![CDATA[
+        • Είναι γνωστός ως ο «πατέρας» της Γεωμετρίας.\n\n
+        • Είναι ίσως ο πιο γνωστός και επιδραστικός μαθηματικός στην αρχαία Ελλάδα και στον κόσμο γενικότερα.\n\n
+        • Το "Στοιχεία", το οποίο αναφέρεται σε γεωμετρικά θέματα και στη θεωρία των φυσικών αριθμών.\n\n
+        • θεωρείται μια από τις σημαντικότερες και επιδραστικότερες μαθηματικές εργασίες που έχουν γραφτεί ποτέ.\n\n
+        • Το έργο αυτό διδάσκεται ακόμα και σήμερα στα σχολεία.
+        ]]>
+    </string>
+    <string name="euclid_dates">350 π.Χ – 270 π.Χ</string>
+
+    <string name="archimedes_title">ΑΡΧΙΜΗΔΗΣ</string>
+    <string name="archimedes_info">
+        <![CDATA[
+        • Ήταν ένας αρχαίος Έλληνας μαθηματικός, φυσικός, μηχανικός και εφευρέτης.\n\n
+        • Γεννήθηκε στην πόλη Συρακούσες.\n\n
+        • Είναι γνωστός για την διάσημη φράση του «εύρηκα – εύρηκα» που αναφώνησε όταν ανακάλυψε την γνωστή Αρχή περί της άνωσης.\n\n
+        • Είχε ενθουσιασθεί που έτρεχε στο δρόμο γυμνός επαναλαμβάνοντας συνεχώς αυτή τη φράση.
+        ]]>
+    </string>
+    <string name="archimedes_dates">287 π.Χ. – 212 π.Χ.</string>
+
+    <string name="alan_turing_title">ΑΛΑΝ ΤΙΟΥΡΙΝΓΚ</string>
+    <string name="alan_turing_info">
+        <![CDATA[
+        • Ήταν Άγγλος μαθηματικός.\n\n
+        • Θεωρείται ο «πατέρας της επιστήμης υπολογιστών» αλλά και της τεχνητής νοημοσύνης, χάρη στο λεγόμενο τεστ Τιούρινγκ, το οποίο πρότεινε το 1950: έναν τρόπο για να διαπιστωθεί πειραματικά αν μία μηχανή έχει αυθεντικές γνωστικές ικανότητες και μπορεί να σκεφτεί.\n\n
+        • Το Βραβείο Τούρινγκ, η ύψιστη επιστημονική διάκριση στον χώρο της πληροφορικής από το 1966 κι έπειτα, ονομάστηκε έτσι προς τιμήν του.
+        ]]>
+    </string>
+    <string name="alan_turing_dates">1912 – 1954</string>
+
+    <string name="isaac_newton_title">ΙΣΑΑΚ ΝΕΥΤΩΝ</string>
+    <string name="isaac_newton_info">
+        <![CDATA[
+        • Ήταν Άγγλος φυσικός, μαθηματικός, αστρονόμος, φιλόσοφος, αλχημιστής και θεολόγος.\n\n
+        • Θεωρείται πατέρας της Κλασικής Φυσικής καθώς διατύπωσε τους τρεις μνημειώδεις νόμους της κίνησης και τον «νόμο της βαρύτητας» (ο θρύλος αναφέρει πως τον βρήκε μετά από πτώση ενός μήλου από μια μηλιά).\n\n
+        • Η συμβολή του ήταν καθοριστική στη θεμελίωση των σύγχρονων μαθηματικών.
+        ]]>
+    </string>
+    <string name="isaac_newton_dates">1643 – 1727</string>
+
+    <string name="mary_sophie_germain_title">ΜΑΡΙ ΣΟΦΙ ΖΕΡΜΑΙΝ</string>
+    <string name="mary_sophie_germain_info">
+        <![CDATA[
+        • Ήταν Γαλλίδα μαθηματικός, φυσικός και φιλόσοφος.\n\n
+        • Από μικρή ηλικία ενδιαφέρθηκε για τη μάθηση και ειδικά για τα μαθηματικά, παρότι οι γονείς της ήταν αντίθετοι σε αυτό και προσπάθησαν να την αποτρέψουν από τη μελέτη των επιστημών.\n\n
+        • Παρόλα αυτά, η Σοφί ξεπέρασε αυτούς τους περιορισμούς και αυτοδίδαχτη μελέτησε μαθηματικά και φιλοσοφία. Όταν ήταν νέα, ενθουσιάστηκε από την ανάγνωση των έργων του Αρχιμήδη και μελέτησε την θεωρία των αριθμών και τις διάφορες μαθηματικές επιστήμες.\n\n
+        • Ένα από τα πιο σημαντικά της έργα ήταν η εξέταση του φαινομένου των πρώτων αριθμών.
+        ]]>
+    </string>
+    <string name="mary_sophie_germain_dates">1776 – 1831</string>
+
+    <string name="ada_lovelace_title">ΑΝΤΑ ΛΑΒΛΕΙΣ</string>
+    <string name="ada_lovelace_info">
+        <![CDATA[
+        • Ήταν μια αγγλική μαθηματικός.\n\n
+        • Ήταν μια από τις πρώτες προγραμματίστριες στην ιστορία της υπολογιστικής.\n\n
+        • Η πρόσφορα της Άντα Λάβλεϊς στην επιστήμη της υπολογιστικής είναι τεράστια, και το έργο της προηγείται της εποχής της κατά πολλούς αιώνες.\n\n
+        • Ως φόρος τιμής για τη συνεισφορά της, ο προγραμματιστικός γλώσσα που αναπτύχθηκε από το Αμερικανικό Στρατό, ο ADA, πήρε το όνομά της.
+        ]]>
+    </string>
+    <string name="ada_lovelace_dates">1815 – 1852</string>
+
+    <string name="hypatia_title">ΥΠΑΤΙΑ</string>
+    <string name="hypatia_info">
+        <![CDATA[
+        • Ήταν Ελληνίδα νεοπλατωνική φιλόσοφος, αστρονόμος και μαθηματικός, διευθύντρια της νεοπλατωνικής σχολής στην Αλεξάνδρεια.\n\n
+        • Δίδαξε φιλοσοφία και μαθηματικά.\n\n
+        • Ήταν ένα άτομο άξιο σεβασμού, που ασκούσε επιρροή στους σημαντικούς άρχοντες της Αλεξάνδρειας αλλά και της Μεσογείου.\n\n
+        • Δυστυχώς, έργα της Υπατίας δεν έχουν διασωθεί.\n\n
+        • Η παρουσία και η συμβολή της Υπατίας στον κόσμο της επιστήμης και της φιλοσοφίας παραμένουν ένα ισχυρό σύμβολο της εξουσίας της γνώσης και της δύναμης της γυναίκας να προωθεί την επιστήμη και την παιδεία.
+        ]]>
+    </string>
+    <string name="hypatia_dates">370 μ.Χ. – 415 μ.Χ.</string>
+
 </resources>
